--- a/app/templates/auth/formulir.html
+++ b/app/templates/auth/formulir.html
@@ -14,7 +14,7 @@
                 <h5 class="mb-3">Data Pribadi</h5>
                 <div class="mb-3">
                     <label for="nama" class="form-label">Nama Lengkap</label>
-                    <input type="text" class="form-control" id="nama" name="nama" required>
+                    <input type="text" class="form-control" id="nama" name="nama" value="{{ current_user.username }}" required>
                 </div>
 
                 <div class="row mb-3">
