--- a/app/templates/auth/dashboard.html
+++ b/app/templates/auth/dashboard.html
@@ -97,7 +97,7 @@
         <!-- User View -->
         <div class="card">
             <div class="card-header">
-                <h4 class="mb-0">My Application</h4>
+                <h4 class="mb-0">Formulir</h4>
             </div>
             <div class="card-body">
                 {% if current_user.formulir %}
